feat: save access level and user email of saved map to the database
